# copilot-money-cli

./: .gitignore  Cargo.toml
scripts/: setup-python.sh
src/: client.rs  config.rs  ops.rs
src/cli/: auth.rs  mod.rs  render.rs
tests/: cli.rs  cli_snapshots.rs
tests/fixtures/graphql/: TransactionsFeed.json
tests/snapshots/: cli_snapshots__categories_list_csv_snapshot.snap  cli_snapshots__transactions_list_csv_snapshot.snap  cli_snapshots__transactions_list_table_filter_date_snapshot.snap
