[package]
name = "copilot-money-cli"
version = "0.1.2"
edition = "2024"
default-run = "copilot"
license = "MIT"
description = "Unofficial CLI client for Copilot Money"
readme = "README.md"
keywords = ["copilot", "graphql", "finance"]
categories = ["command-line-utilities"]
include = ["src/**", "tests/**", "graphql/**", "schema/**", "docs/**", "scripts/**", "tools/**", "README.md", "LICENSE", "CHANGELOG.md", "Cargo.toml", "Cargo.lock"]
repository = "https://github.com/JaviSoto/copilot-money-cli"
publish = true
[[bin]]
name = "copilot"
path = "src/main.rs"

[[bin]]
name = "schema-gen"
path = "src/bin/schema_gen.rs"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
comfy-table = "7.2.1"
graphql-parser = "0.4.1"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.4.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
terminal_size = "0.4.3"
unicode-width = "0.2.1"

[dev-dependencies]
assert_cmd = "2.0.17"
insta = "1.43.2"
predicates = "3.1.3"
tempfile = "3.23.0"
